Added keyword validation for project dir

--- a/birds/templates/birds/index.html
+++ b/birds/templates/birds/index.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 {% if message %}
-    {{ message }}
+    <p>{{ message }}</p>
 {% else %}
     
 <div class="jumbotron text-center">
