--- a/birds/static/birds/styles.css
+++ b/birds/static/birds/styles.css
@@ -16,7 +16,7 @@
     padding: 10px 50px 10px 50px;
     width: 33.33%;
     width: calc(100% / 3);
-    height: 200px;
+    height: 220px;
     text-align: center;
     float: left;
     /* background-color: mistyrose; */
@@ -25,7 +25,7 @@
 img.tag {
     vertical-align: middle;
     max-width: 100%;
-    max-height: 150px;
+    max-height: 170px;
     border-radius: 5px;
 }
 
@@ -44,7 +44,7 @@ button.basic {
     padding: 0;
     border-radius: 5px;
     width: 100%;
-    height: 180px;
+    height: 200px;
 }
 button.dropdown-toggle {
     border: 0;
@@ -55,4 +55,7 @@ button.dropdown-toggle {
 }
 .dropdown-menu {
     min-width: 100%;
+    height: auto;
+    max-height: 166px;
+    overflow-x: hidden;
 }
