Added Identifications to Project view

--- a/birds/templates/project_list.html
+++ b/birds/templates/project_list.html
@@ -18,6 +18,7 @@
                 <th># Users</th>
                 <th># Tags</th>
                 <th># Records</th>
+                <th># Identifications</th>
             </tr>
         </thead>
         <tbody>
@@ -29,8 +30,8 @@
                 <td>[[ project.rights.length ]]</td>
                 <td>[[ project.tags.length ]]</td>
                 <td>[[ project.records.length ]]</td>
+                <td>[[ project.identifications.length ]]</td>
             </tr>
-
         </tbody>
     </table>
 </div>
