--- a/birds/templates/index.html
+++ b/birds/templates/index.html
@@ -2,7 +2,7 @@
 
 {% load static %} {% comment %}  use staticfiles to serve files from cloud service {% endcomment %}
 
-{% block ng_controller %}animalsCtrl{% endblock ng_controller %}
+{% block ng_controller %}ProjectsCtrl{% endblock ng_controller %}
 
 {% block content %}
 
