--- a/birds/templates/project_list.html
+++ b/birds/templates/project_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block ng_controller %}animalsCtrl{% endblock ng_controller %}
+{% block ng_controller %}ProjectsCtrl{% endblock ng_controller %}
 
 {% block content %}
 
