--- a/birds/templates/project_list.html
+++ b/birds/templates/project_list.html
@@ -11,9 +11,9 @@
     <table class="table">
         <thead>
             <tr>
-                <th>ID</th>
+                {% comment %} <th>ID</th> {% endcomment %}
                 <th>Name</th>
-                <th>Directory</th>
+                {% comment %} <th>Directory</th> {% endcomment %}
                 <th>File type</th>
                 <th># Users</th>
                 <th># Tags</th>
@@ -23,9 +23,9 @@
         </thead>
         <tbody>
             <tr ng-repeat="project in projects | orderBy:['id','name']">
-                <td>[[ project.id ]]</td>
-                <td>[[ project.name ]]</td>
-                <td>[[ project.directory ]]</td>
+                {% comment %} <td>[[ project.id ]]</td> {% endcomment %}
+                <td><a href="[[ project.directory ]]">[[ project.name ]]</a></td>
+                {% comment %} <td>[[ project.directory ]]</td> {% endcomment %}
                 <td>[[ project.file_type ]]</td>
                 <td>[[ project.rights.length ]]</td>
                 <td>[[ project.tags.length ]]</td>
@@ -37,3 +37,5 @@
 </div>
 
 {% endblock content %}
+
+<a href="{% url 'birds:logout' %}">Logout</a>
