--- a/birds/templates/base.html
+++ b/birds/templates/base.html
@@ -20,19 +20,16 @@
 
     <body ng-app="{% block ng_app %}animalsApp{% endblock %}">
 
-        <div class="content" ng-controller="{% block ng_controller %} Put controller here {% endblock ng_controller %}">
+        <div class="content" ng-controller="{% block ng_controller %}{% endblock ng_controller %}">
 
-            <!-- Navigation bar -->
-            {% comment %} <aside style="position:absolute; right:5; top:5px;" role="navigation">
-                <div>User: <a href="{% url 'profile' %}">[[ loggedUser.username ]]</a></div>
-                <div><a href="{% url 'meal-list-view' %}">Meals</a></div>
-                {% if user.is_staff or user.is_manager %}<div><a href="{% url 'user-list-view' %}">Users</a></div>{% endif %}
-                <div><a href="{% url 'logout' %}">Logout</a></div>
-            </aside> {% endcomment %}
-
-            <aside style="position:absolute; right:5; top:5px;" role="navigation">
-                <div>User: <a href="{% url 'birds:profile' %}">[[ loggedUser.username ]]</a></div>
-                <div><a href="{% url 'birds:logout' %}">Logout</a></div>
+            <aside style="position:absolute; right:5px; top:5px;" role="navigation">
+                {% if user.username %}
+                    <div>Hi <a href="{% url 'birds:profile' %}">{{user.username}}</a></div>
+                    <div><a href="{% url 'birds:logout' %}">Logout</a></div>
+                {% else %}
+                    <div><a href="{% url 'birds:login' %}">Login</a></div>
+                    <div><a href="{% url 'birds:signup' %}">Sign up</a></div>
+                {% endif %}
             </aside>
 
             {% block content %}
