--- a/birds/templates/project_list.html
+++ b/birds/templates/project_list.html
@@ -1,39 +1,40 @@
 {% extends 'base.html' %}
 
-{% block ng_controller %}ProjectListCtrl{% endblock ng_controller %}
-
 {% block content %}
 
-<h1>Project list</h1>
+<div ng-controller="ProjectListCtrl" ng-cloak>
 
-<!-- Project list -->
-<div class="table-responsive" role="view_list">          
-    <table class="table">
-        <thead>
-            <tr>
-                {% comment %} <th>ID</th> {% endcomment %}
-                <th>Name</th>
-                {% comment %} <th>Directory</th> {% endcomment %}
-                <th>File type</th>
-                <th># Users</th>
-                <th># Tags</th>
-                <th># Records</th>
-                <th># Identifications</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr ng-repeat="project in projects | orderBy:['id','name']">
-                {% comment %} <td>[[ project.id ]]</td> {% endcomment %}
-                <td><a href="[[ project.directory ]]">[[ project.name ]]</a></td>
-                {% comment %} <td>[[ project.directory ]]</td> {% endcomment %}
-                <td>[[ project.file_type ]]</td>
-                <td>[[ project.rights.length ]]</td>
-                <td>[[ project.tags.length ]]</td>
-                <td>[[ project.records.length ]]</td>
-                <td>[[ project.identifications.length ]]</td>
-            </tr>
-        </tbody>
-    </table>
+    <h1>Project list</h1>
+
+    <div class="table-responsive" role="view_list">          
+        <table class="table">
+            <thead>
+                <tr>
+                    {% comment %} <th>ID</th> {% endcomment %}
+                    <th>Name</th>
+                    {% comment %} <th>Directory</th> {% endcomment %}
+                    <th>File type</th>
+                    <th># Users</th>
+                    <th># Tags</th>
+                    <th># Records</th>
+                    <th># Identifications</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="project in projects | orderBy:['id','name']">
+                    {% comment %} <td>[[ project.id ]]</td> {% endcomment %}
+                    <td><a href="[[ project.directory ]]">[[ project.name ]]</a></td>
+                    {% comment %} <td>[[ project.directory ]]</td> {% endcomment %}
+                    <td>[[ project.file_type ]]</td>
+                    <td>[[ project.rights.length ]]</td>
+                    <td>[[ project.tags.length ]]</td>
+                    <td>[[ project.records.length ]]</td>
+                    <td>[[ project.identifications.length ]]</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
 </div>
 
 {% endblock content %}
