--- a/birds/templates/project_detail.html
+++ b/birds/templates/project_detail.html
@@ -2,49 +2,111 @@
 
 {% block content %}
 
-<div ng-controller="ProjectDetailCtrl" ng-init="getProject({{ project_id }})" ng-cloak>
+<div ng-controller="ProjectDetailCtrl" ng-init="getProject({{ project_id }})" ng-cloak class="form-container">
 
-        <h1>[[ project.name ]]</h1>
-            Div: [[ project_id ]]
-            <a href="[[ project.directory ]]">[[ project.name ]]</a><br>
-        [[ project.file_type ]]<br>
-        [[ project.rights.length ]]<br>
-        [[ project.tags.length ]]<br>
-        [[ project.records.length ]]<br>
-        [[ project.identifications.length ]]<br> 
+<div class="col-sm-offset-2 col-sm-10"><h1>[[ project.name ]]</h1></div>
 
-</div>
+<form class="form-horizontal">
+    {% csrf_token %}
+    <div class="form-group">
+        <label class="control-label col-sm-2">ID:</label>
+        <div class="col-sm-10">
+            <div style="padding: 6px 12px;">[[ project.id ]]</div>
+            {% comment %} <input class="form-control" type="text" name="id" ng-model="project.id" readonly> {% endcomment %}
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-sm-2">Name:</label>
+        <div class="col-sm-10"> 
+            <input class="form-control" type="text" name="name" ng-model="project.name">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-sm-2">Directory:</label>
+        <div class="col-sm-10"> 
+            <input class="form-control" type="text" name="directory" ng-model="project.directory">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-sm-2">File type:</label>
+        <div class="col-sm-10"> 
+            <input class="form-control" type="text" name="file_type" ng-model="project.file_type">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-sm-2"># Tags:</label>
+        <div class="col-sm-10"> 
+            <div style="padding: 6px 12px;">[[ project.tags.length ]]</div>
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-sm-2"># Records:</label>
+        <div class="col-sm-10"> 
+            <div style="padding: 6px 12px;">[[ project.records.length ]]</div>
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-sm-2"># Identifications:</label>
+        <div class="col-sm-10"> 
+            <div style="padding: 6px 12px;">[[ project.identifications.length ]]</div>
+        </div>
+    </div>
+    <div class="form-group"> 
+        <div class="col-sm-offset-2 col-sm-10">
+            {% comment %} <button type="submit" class="btn btn-default">Update</button> {% endcomment %}
+            <button ng-click="updateMeal(meal)">Update</button>
+        </div>
+    </div>
+</form>
 
+<h2>Project users:</h2>
 
-{% comment %} {{ project_id }} {% endcomment %}
-
-{% comment %} <div ng-init="project_id='{{ project_id }}'" > {% endcomment %}
-
-
-<!-- Project list -->
-{% comment %} <div class="table-responsive" role="view_list">          
+<div class="table-responsive">          
     <table class="table">
         <thead>
             <tr>
+                <th>#</th>
                 <th>Name</th>
-                <th>File type</th>
-                <th># Users</th>
-                <th># Tags</th>
-                <th># Records</th>
-                <th># Identifications</th>
+                <th>Date</th>
+                <th>Time</th>
+                <th>Calories</th>
+                {% if user.is_staff or user.is_manager %}<th>User</th>{% endif %}
+                <th></th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="project in projects | orderBy:['id','name']">
-                <td><a href="[[ project.directory ]]">[[ project.name ]]</a></td>
-                <td>[[ project.file_type ]]</td>
-                <td>[[ project.rights.length ]]</td>
-                <td>[[ project.tags.length ]]</td>
-                <td>[[ project.records.length ]]</td>
-                <td>[[ project.identifications.length ]]</td>
+            <tr>
+                <form>
+                    {% csrf_token %}
+                    <td></td>
+                    <td><input type="text" name="text" placeholder="Required" ng-model="currentMeal.text"></td>
+                    <td><input type="text" name="date" placeholder="Today()" ng-model="currentMeal.date"></td>
+                    <td><input type="text" name="time" placeholder="Now()" ng-model="currentMeal.time"></td>
+                    <td><input type="number" name="calories" placeholder="0" ng-model="currentMeal.calories"></td>
+                    {% if user.is_staff or user.is_manager %}<td></td>{% endif %}
+                    <td><button ng-click="saveMeal()">Add new</button></td>
+                    <td></td>
+                </form>
+            </tr>             
+            <tr ng-repeat="meal in meals | orderBy:['-date','-time'] | dateRangeFilter:dateFrom:dateTo | timeRangeFilter:timeFrom:timeTo" class="[[ todayCalories ]]">
+                <form>
+                    {% csrf_token %}
+                    <td>[[ $index ]]</td>
+                    <td><input type="text" name="text" ng-model="meal.text"></td>
+                    <td><input type="text" name="date" ng-model="meal.date"></td>
+                    <td><input type="text" name="time" ng-model="meal.time"></td>
+                    <td><input type="number" name="calories" ng-model="meal.calories"></td>
+                    {% if user.is_staff or user.is_manager %}<td>[[ meal.user ]]</td>{% endif %}
+                    <td><button ng-click="updateMeal(meal)">Update</button></td>
+                    <td><button ng-click="deleteMeal(meal)">Delete</button></td>
+                </form>
             </tr>
+
         </tbody>
     </table>
-</div> {% endcomment %}
+</div>
+
+</div>
 
 {% endblock content %}
