--- a/birds/templates/registration/login.html
+++ b/birds/templates/registration/login.html
@@ -1,11 +1,10 @@
 {% extends 'base.html' %}
 
-{% block title %}Login{% endblock %}
-
 {% block content %}
 
-<div class="form-container">
-    <h2>Login</h2>
+<div ng-controller="" class="form-container">
+
+    <h1>Login</h1>
 
     <form method="post">
         {% csrf_token %}
@@ -23,6 +22,7 @@
         {% endfor %}
         <button type="submit">Login</button>
     </form>
+
 </div>
 
 {% endblock %}
