--- a/birds/templates/registration/signup.html
+++ b/birds/templates/registration/signup.html
@@ -1,11 +1,10 @@
 {% extends 'base.html' %}
 
-{% block title %}Sign up{% endblock %}
-
 {% block content %}
 
-<div class="form-container">
-    <h2>Sign up</h2>
+<div ng-controller="" class="form-container">
+
+    <h1>Sign up</h1>
 
     <form method="post">
         {% csrf_token %}
