--- a/birds/templates/registration/profile.html
+++ b/birds/templates/registration/profile.html
@@ -1,10 +1,10 @@
-{% extends '../base.html' %}
-
-{% block ng_controller %}userDetailCtrl{% endblock ng_controller %}
+{% extends 'base.html' %}
 
 {% block content %}
 
-<h1>Profile</h1>
+<div ng-controller="" class="form-container">
+
+<h1>[[ user.username ]]</h1>
 
 <form  class="form-inline">
     {% csrf_token %}
