Added link to project detail/edit view

--- a/birds/templates/base.html
+++ b/birds/templates/base.html
@@ -18,7 +18,7 @@
 
     </head>
 
-    <body ng-app="{% block ng_app %}animalsApp{% endblock %}">
+    <body ng-app="animalsApp">
 
         <aside style="position:absolute; right:5px; top:5px;" role="navigation">
             {% if user.username %}
