--- a/birds/templates/project_detail.html
+++ b/birds/templates/project_detail.html
@@ -2,7 +2,10 @@
 
 {% block content %}
 
-<div ng-controller="ProjectDetailCtrl" ng-init="getProject({{ project_id }})" ng-cloak class="form-container">
+<div ng-controller="ProjectDetailCtrl" ng-init="getProject('{{ project_dir }}')" ng-cloak class="form-container">
+
+<div ng-show="error_message">[[ error_message ]]</div>
+<div ng-hide="error_message">
 
 <h1>[[ project.name ]]</h1>
 
@@ -42,7 +45,13 @@
     <div class="form-group">
         <label class="control-label col-sm-2"># Records:</label>
         <div class="col-sm-10"> 
-            <div style="padding: 6px 12px;">[[ project.record_count ]]</div>
+            <div style="padding: 6px 12px;">[[ project.record_count ]] ([[ project.record_with_file_count ]])</div>
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-sm-2"># Users:</label>
+        <div class="col-sm-10"> 
+            <div style="padding: 6px 12px;">[[ project.right_count ]] ([[ project.owner_count ]], [[ project.expert_count ]], [[ project.layman_count ]])</div>
         </div>
     </div>
     <div class="form-group">
@@ -112,6 +121,8 @@
 
         </tbody>
     </table>
+</div>
+
 </div>
 
 </div>
