Repaired basic project ser for project list view

--- a/birds/templates/base.html
+++ b/birds/templates/base.html
@@ -15,7 +15,8 @@
         <script src="{% static 'animalsController.js' %}"></script>
         <!-- Styles -->
         <link href="{% static 'styles.css' %}" rel="stylesheet" type="text/css">
-
+        <!-- Favicon -->
+        <link href="{% static 'favicon.ico' %}" rel="shortcut icon" type="image/png">
     </head>
 
     <body ng-app="animalsApp">
