--- a/birds/templates/project_detail.html
+++ b/birds/templates/project_detail.html
@@ -45,17 +45,17 @@
     <div class="form-group">
         <label class="control-label col-sm-2"># Records:</label>
         <div class="col-sm-10"> 
-            <div style="padding: 6px 12px;">[[ project.record_count ]] ([[ project.record_with_file_count ]])</div>
+            <div style="padding: 6px 12px;">[[ project.record_count ]] ([[ project.record_with_file_count ]] with file)</div>
         </div>
     </div>
     <div class="form-group">
         <label class="control-label col-sm-2"># Users:</label>
         <div class="col-sm-10"> 
-            <div style="padding: 6px 12px;">[[ project.right_count ]] ([[ project.owner_count ]], [[ project.expert_count ]], [[ project.layman_count ]])</div>
+            <div style="padding: 6px 12px;">[[ project.right_count ]] ([[ project.owner_count ]] owners, [[ project.expert_count ]] experts, [[ project.layman_count ]] laymen)</div>
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label col-sm-2"># Identifications:</label>
+        <label class="control-label col-sm-2"># Entries:</label>
         <div class="col-sm-10"> 
             <div style="padding: 6px 12px;">[[ project.identification_count ]]</div>
         </div>
@@ -70,58 +70,94 @@
 
 <h2>Project users:</h2>
 
-<div class="table-responsive">          
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Username:</th>
-                <th>Email:</th>
-                <th># Identifications</th>
-                <th>Role</th>
-                <th></th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <form>
-                    {% csrf_token %}
+<form>
+{% csrf_token %}
+
+    <div class="table-responsive">          
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Username:</th>
+                    <th>Email:</th>
+                    <th># Entries</th>
+                    <th>Role</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        <div class="dropdown">
+                            <button class="select dropdown-toggle" data-toggle="dropdown" title="User name">
+                                [[ new_user.username ]] <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li ng-repeat="user_wo_rights in project.users_wo_rights">
+                                    <button class="dropdown-choice" ng-class="{active: new_user.username == user_wo_rights.username}" ng-click="updateNewUser(user_wo_rights.username, undefined, undefined)">[[ user_wo_rights.username ]]</button>
+                                </li>
+                            </ul>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="dropdown">
+                            <button class="select dropdown-toggle" data-toggle="dropdown" title="User email">
+                                [[ new_user.email ]] <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li ng-repeat="user_wo_rights in project.users_wo_rights">
+                                    <button class="dropdown-choice" ng-class="{active: new_user.email == user_wo_rights.email}" ng-click="updateNewUser(undefined, user_wo_rights.email, undefined)">[[ user_wo_rights.email ]]</button>
+                                </li>
+                            </ul>
+                        </div>
+                    </td>
+                    <td></td>
+                    <td>
+                        <div class="dropdown">
+                            <button class="select dropdown-toggle" data-toggle="dropdown" title="User role">
+                                [[ new_user_role_name ]] <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li ng-repeat="role_name in project.role_names">
+                                    <button class="dropdown-choice" ng-class="{active: new_user_role_name == role_name}" ng-click="updateNewUser(undefined, undefined, role_name)">[[ role_name ]]</button>
+                                </li>
+                            </ul>
+                        </div>
+                    </td>
+                    <td><button class="send" ng-click="addRight()">Add</button></td>
+                </tr>
+                {% comment %} <tr>
                     <td><select ng-model="new_user" ng-options="user_wo_rights.username for user_wo_rights in project.users_wo_rights"></select></td>
                     <td><select ng-model="new_user" ng-options="user_wo_rights.email for user_wo_rights in project.users_wo_rights"></select></td>
                     <td></td>
                     <td><select ng-model="new_user_role" ng-options="role_name for role_name in project.role_names"></select></td>
                     <td></td>
                     <td><button ng-click="addRight()">Add</button></td>
-                </form>
-            </tr> 
-            <tr ng-repeat="right in project.rights | orderBy:['role','-name']">
-                <form>
-                    {% csrf_token %}
+                </tr>  {% endcomment %}
+                <tr ng-repeat="right in project.rights | orderBy:['role','-name']">
                     <td>[[ right.username ]]</td>
                     <td>[[ right.email ]]</td>
                     <td>[[ right.identification_count ]]</td>
 
-                    {% comment %} <div class="dropdown">
-                        <button class="tag dropdown-toggle" data-toggle="dropdown" title="User role">
-                            [[ right.role_name ]]
-                            <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li ng-repeat="role_choice in project.role_choices">
-                                <button class="dropdown-choice" ng-model="right.role">{{ tag.name }}</button>
-                            </li>
-                        </ul>
-                    </div> {% endcomment %}
-                    <td><select ng-model="right.role_name" ng-options="role_name for role_name in project.role_names"></select></td>
+                    <td>
+                        <div class="dropdown">
+                            <button class="select dropdown-toggle" data-toggle="dropdown" title="User role">
+                                [[ right.role_name ]] <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li ng-repeat="role_name in project.role_names">
+                                    <button class="dropdown-choice" ng-class="{active: right.role_name == role_name}" ng-click="updateRight(right, role_name)">[[ role_name ]]</button>
+                                </li>
+                            </ul>
+                        </div>
+                        {% comment %} <select ng-model="right.role_name" ng-options="role_name for role_name in project.role_names"></select> {% endcomment %}
+                    </td>
                     {% comment %} <td><input type="text" name="role" ng-model="right.role_name" ng-value="1"></td> {% endcomment %}
-                    <td><button ng-click="updateRight(right)">Update</button></td>
-                    <td><button ng-click="deleteRight(right)">Remove</button></td>
-                </form>
-            </tr>
-
-        </tbody>
-    </table>
-</div>
+                    <td><button class="send" ng-click="deleteRight(right)">Remove</button></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</form>
 
 </div>
 
